[gd_scene format=3 uid="uid://dnkp1y4ur6vwa"]

[ext_resource type="Script" uid="uid://cknjrlw7jolox" path="res://Scripts/Enemies/Crabmeat/crabmeat.gd" id="1_q4cqa"]
[ext_resource type="Texture2D" uid="uid://dy4sej0acta6l" path="res://Assets/Images/Enemies/Crabmeat/Crabmeat.png" id="2_38w7e"]

[sub_resource type="Animation" id="Animation_ec42x"]
resource_name = "Fire"
length = 1.8666685
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1666667, 1.2333335, 1.2500001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 0, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2666668),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fireBullet"
}]
}

[sub_resource type="Animation" id="Animation_ddvs6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_38w7e"]
resource_name = "Walk"
loop_mode = 1
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.53333336, 0.8000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uufeo"]
_data = {
&"Fire": SubResource("Animation_ec42x"),
&"RESET": SubResource("Animation_ddvs6"),
&"Walk": SubResource("Animation_38w7e")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38w7e"]
size = Vector2(2, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec42x"]

[node name="Crabmeat" type="CharacterBody2D" unique_id=1533432335]
collision_layer = 2
script = ExtResource("1_q4cqa")
SPEED = 7.5
GRABBABLE = false
RESPAWN = false
metadata/_custom_type_script = "uid://bf17arjbhumlf"

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=806265410]
position = Vector2(0, -12)
texture = ExtResource("2_38w7e")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 96, 24)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=361250296]
root_node = NodePath("../Sprite2D")
libraries/ = SubResource("AnimationLibrary_uufeo")
autoplay = &"Walk"

[node name="CollisionBox" type="CollisionShape2D" parent="." unique_id=1475269893]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_38w7e")

[node name="Hitbox" type="Area2D" parent="." unique_id=1110463301 groups=["damageHitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" unique_id=137212439]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_ec42x")

[node name="BulletSpawn1" type="Marker2D" parent="." unique_id=1132565221]
position = Vector2(-8, -26)

[node name="BulletSpawn2" type="Marker2D" parent="." unique_id=593540456]
position = Vector2(8, -26)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." unique_id=1283512716]
position = Vector2(0, -10)
rect = Rect2(-12, -14, 24, 24)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
